# public/swagger.json
@@ -212,11 +212,13 @@
           "firstName": { "type": "string", "maxLength": 15 },
           "lastName": { "type": "string", "maxLength": 15 },
           "email": { "type": "string", "format": "email" },
-          "phone": { "type": "string", "pattern": "^\\d{1,15}$" },
+          "phoneCountryCode": { "type": "string", "pattern": "^\\+[0-9]{1,4}$" },
+          "phone": { "type": "string", "pattern": "^\\d{4,15}$" },
           "password": { "type": "string", "minLength": 8 },
           "idNumber": { "type": "string", "pattern": "^\\d{1,16}$" },
           "dateOfBirth": { "type": "string", "format": "date" },
-          "address": { "type": "string", "minLength": 3 },
+          "country": { "type": "string" },
+          "city": { "type": "string" },
           "occupation": { "type": "string" },
           "investmentExperience": { "type": "string" }
         },
@@ -224,11 +226,13 @@
           "firstName",
           "lastName",
           "email",
+          "phoneCountryCode",
           "phone",
           "password",
           "idNumber",
           "dateOfBirth",
-          "address",
+          "country",
+          "city",
           "occupation",
           "investmentExperience"
         ]
