# src/features/auth/authApi.ts
@@ -4,11 +4,14 @@ interface SignupRequest {
   firstName: string;
   lastName: string;
   email: string;
+  phoneCountryCode: string;
   phone: string;
   password: string;
+  confirmPassword: string;
   idNumber: string;
   dateOfBirth: string;
-  address: string;
+  country: string;
+  city: string;
   occupation: string;
   investmentExperience: string;
 }
